tests/Front/SemanticError/05_FunctionsSameName.c
void main() {
    int32_t a;
    a = 1;
}
void function1 (){

}
int32_t function1 (char a){
    a = 6;
}